<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>point_cloud_pruner</name>
  <version>0.1.0</version>

  <description>
    Point Cloud Pruner -- Prunes point cloud from realsense camera
    based on depth.
  </description>
  <maintainer email="peris@oregonstate.edu">Skand</maintainer>

  <license>BSD 3-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
